# mutt-language-server

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: conf.py
docs/api/: mutt-language-server.md
docs/resources/: configure.md  install.md
scripts/: generate-muttrc.json.py
src/mutt_language_server/: __init__.py  __main__.py  api.py  finders.py  schema.py  server.py  utils.py
src/mutt_language_server/assets/jq/: main.jq  value.jq
src/mutt_language_server/assets/json/: mutt.json  muttrc.json  neomuttrc.json
src/mutt_language_server/misc/: __init__.py
tests/: neomuttrc  server_test.py  test_server.py  test_utils.py
